darksword/interpreter/generated/LLVMIRParser.java
// Generated from ../src/darksword/interpreter/generated/LLVMIR.g4 by ANTLR 4.7.2

    package darksword.interpreter.generated;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LLVMIRParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, IntType=52, 
		VoidType=53, LabelType=54, GlobalReg=55, LocalReg=56, NullptrConstant=57, 
		BoolConstant=58, StringConstant=59, LinkageType=60, PreemptionSpecifiers=61, 
		VisibilityStyles=62, GlobalWord=63, UnnamedAddr=64, FuncAttr=65, ParaAttr=66, 
		IntegerLiteral=67, Identifier=68, WhitespaceEater=69, NewlineEater=70, 
		LineCommentEater=71, EndZero=72, EscapeEnter=73, EscapeBackslash=74, EscapeQuote=75, 
		StringLiteral=76, InfoStr=77;
	public static final int
		RULE_rootLLVMIR = 0, RULE_targetInfo = 1, RULE_sourceFn = 2, RULE_dataLayout = 3, 
		RULE_targetTriple = 4, RULE_initExp = 5, RULE_globalDecl = 6, RULE_classDecl = 7, 
		RULE_funcCall = 8, RULE_funcInfo = 9, RULE_funcDecl = 10, RULE_funcDef = 11, 
		RULE_basicBlock = 12, RULE_instDest = 13, RULE_gepOffset = 14, RULE_phiBranch = 15, 
		RULE_cmpOp = 16, RULE_binaryOp = 17, RULE_instruction = 18, RULE_atom = 19, 
		RULE_alignment = 20, RULE_type = 21, RULE_arrayType = 22, RULE_basicType = 23, 
		RULE_integerConstant = 24;
	private static String[] makeRuleNames() {
		return new String[] {
			"rootLLVMIR", "targetInfo", "sourceFn", "dataLayout", "targetTriple", 
			"initExp", "globalDecl", "classDecl", "funcCall", "funcInfo", "funcDecl", 
			"funcDef", "basicBlock", "instDest", "gepOffset", "phiBranch", "cmpOp", 
			"binaryOp", "instruction", "atom", "alignment", "type", "arrayType", 
			"basicType", "integerConstant"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'source_filename'", "'='", "'target'", "'datalayout'", "'triple'", 
			"'zeroinitializer'", "'type'", "'{'", "','", "'}'", "'('", "')'", "'declare'", 
			"'define'", "':'", "'['", "']'", "'sgt'", "'sge'", "'slt'", "'sle'", 
			"'eq'", "'ne'", "'add'", "'sub'", "'mul'", "'sdiv'", "'srem'", "'shl'", 
			"'ashr'", "'and'", "'or'", "'xor'", "'alloca'", "'bitcast'", "'to'", 
			"'trunc'", "'zext'", "'br'", "'call'", "'getelementptr'", "'inbounds'", 
			"'icmp'", "'load'", "'store'", "'ret'", "'phi'", "'align'", "'*'", "'x'", 
			"'-'", null, "'void'", "'label'", null, null, "'null'", null, null, null, 
			null, null, null, null, "'nounwind'", "'noalias'", null, null, null, 
			null, null, "'\\00'", "'\\n'", "'\\\\'", "'\\\"'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "IntType", "VoidType", "LabelType", "GlobalReg", 
			"LocalReg", "NullptrConstant", "BoolConstant", "StringConstant", "LinkageType", 
			"PreemptionSpecifiers", "VisibilityStyles", "GlobalWord", "UnnamedAddr", 
			"FuncAttr", "ParaAttr", "IntegerLiteral", "Identifier", "WhitespaceEater", 
			"NewlineEater", "LineCommentEater", "EndZero", "EscapeEnter", "EscapeBackslash", 
			"EscapeQuote", "StringLiteral", "InfoStr"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LLVMIR.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LLVMIRParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class RootLLVMIRContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(LLVMIRParser.EOF, 0); }
		public List<TargetInfoContext> targetInfo() {
			return getRuleContexts(TargetInfoContext.class);
		}
		public TargetInfoContext targetInfo(int i) {
			return getRuleContext(TargetInfoContext.class,i);
		}
		public List<FuncDeclContext> funcDecl() {
			return getRuleContexts(FuncDeclContext.class);
		}
		public FuncDeclContext funcDecl(int i) {
			return getRuleContext(FuncDeclContext.class,i);
		}
		public List<FuncDefContext> funcDef() {
			return getRuleContexts(FuncDefContext.class);
		}
		public FuncDefContext funcDef(int i) {
			return getRuleContext(FuncDefContext.class,i);
		}
		public List<GlobalDeclContext> globalDecl() {
			return getRuleContexts(GlobalDeclContext.class);
		}
		public GlobalDeclContext globalDecl(int i) {
			return getRuleContext(GlobalDeclContext.class,i);
		}
		public List<ClassDeclContext> classDecl() {
			return getRuleContexts(ClassDeclContext.class);
		}
		public ClassDeclContext classDecl(int i) {
			return getRuleContext(ClassDeclContext.class,i);
		}
		public RootLLVMIRContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rootLLVMIR; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LLVMIRListener ) ((LLVMIRListener)listener).enterRootLLVMIR(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LLVMIRListener ) ((LLVMIRListener)listener).exitRootLLVMIR(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLVMIRVisitor ) return ((LLVMIRVisitor<? extends T>)visitor).visitRootLLVMIR(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RootLLVMIRContext rootLLVMIR() throws RecognitionException {
		RootLLVMIRContext _localctx = new RootLLVMIRContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_rootLLVMIR);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << T__12) | (1L << T__13) | (1L << GlobalReg) | (1L << LocalReg))) != 0)) {
				{
				setState(55);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__0:
				case T__2:
					{
					setState(50);
					targetInfo();
					}
					break;
				case T__12:
					{
					setState(51);
					funcDecl();
					}
					break;
				case T__13:
					{
					setState(52);
					funcDef();
					}
					break;
				case GlobalReg:
					{
					setState(53);
					globalDecl();
					}
					break;
				case LocalReg:
					{
					setState(54);
					classDecl();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(60);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TargetInfoContext extends ParserRuleContext {
		public SourceFnContext sourceFn() {
			return getRuleContext(SourceFnContext.class,0);
		}
		public DataLayoutContext dataLayout() {
			return getRuleContext(DataLayoutContext.class,0);
		}
		public TargetTripleContext targetTriple() {
			return getRuleContext(TargetTripleContext.class,0);
		}
		public TargetInfoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_targetInfo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LLVMIRListener ) ((LLVMIRListener)listener).enterTargetInfo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LLVMIRListener ) ((LLVMIRListener)listener).exitTargetInfo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLVMIRVisitor ) return ((LLVMIRVisitor<? extends T>)visitor).visitTargetInfo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TargetInfoContext targetInfo() throws RecognitionException {
		TargetInfoContext _localctx = new TargetInfoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_targetInfo);
		try {
			setState(65);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(62);
				sourceFn();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(63);
				dataLayout();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(64);
				targetTriple();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SourceFnContext extends ParserRuleContext {
		public TerminalNode InfoStr() { return getToken(LLVMIRParser.InfoStr, 0); }
		public SourceFnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sourceFn; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LLVMIRListener ) ((LLVMIRListener)listener).enterSourceFn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LLVMIRListener ) ((LLVMIRListener)listener).exitSourceFn(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLVMIRVisitor ) return ((LLVMIRVisitor<? extends T>)visitor).visitSourceFn(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SourceFnContext sourceFn() throws RecognitionException {
		SourceFnContext _localctx = new SourceFnContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sourceFn);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(T__0);
			setState(68);
			match(T__1);
			setState(69);
			match(InfoStr);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DataLayoutContext extends ParserRuleContext {
		public TerminalNode InfoStr() { return getToken(LLVMIRParser.InfoStr, 0); }
		public DataLayoutContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dataLayout; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LLVMIRListener ) ((LLVMIRListener)listener).enterDataLayout(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LLVMIRListener ) ((LLVMIRListener)listener).exitDataLayout(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLVMIRVisitor ) return ((LLVMIRVisitor<? extends T>)visitor).visitDataLayout(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DataLayoutContext dataLayout() throws RecognitionException {
		DataLayoutContext _localctx = new DataLayoutContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_dataLayout);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			match(T__2);
			setState(72);
			match(T__3);
			setState(73);
			match(T__1);
			setState(74);
			match(InfoStr);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TargetTripleContext extends ParserRuleContext {
		public TerminalNode InfoStr() { return getToken(LLVMIRParser.InfoStr, 0); }
		public TargetTripleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_targetTriple; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LLVMIRListener ) ((LLVMIRListener)listener).enterTargetTriple(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LLVMIRListener ) ((LLVMIRListener)listener).exitTargetTriple(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLVMIRVisitor ) return ((LLVMIRVisitor<? extends T>)visitor).visitTargetTriple(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TargetTripleContext targetTriple() throws RecognitionException {
		TargetTripleContext _localctx = new TargetTripleContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_targetTriple);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(T__2);
			setState(77);
			match(T__4);
			setState(78);
			match(T__1);
			setState(79);
			match(InfoStr);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InitExpContext extends ParserRuleContext {
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public InitExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_initExp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LLVMIRListener ) ((LLVMIRListener)listener).enterInitExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LLVMIRListener ) ((LLVMIRListener)listener).exitInitExp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLVMIRVisitor ) return ((LLVMIRVisitor<? extends T>)visitor).visitInitExp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InitExpContext initExp() throws RecognitionException {
		InitExpContext _localctx = new InitExpContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_initExp);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__50:
			case GlobalReg:
			case LocalReg:
			case NullptrConstant:
			case BoolConstant:
			case StringConstant:
			case IntegerLiteral:
				{
				setState(81);
				atom();
				}
				break;
			case T__5:
				{
				setState(82);
				match(T__5);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GlobalDeclContext extends ParserRuleContext {
		public TerminalNode GlobalReg() { return getToken(LLVMIRParser.GlobalReg, 0); }
		public TerminalNode GlobalWord() { return getToken(LLVMIRParser.GlobalWord, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public InitExpContext initExp() {
			return getRuleContext(InitExpContext.class,0);
		}
		public TerminalNode LinkageType() { return getToken(LLVMIRParser.LinkageType, 0); }
		public TerminalNode PreemptionSpecifiers() { return getToken(LLVMIRParser.PreemptionSpecifiers, 0); }
		public TerminalNode VisibilityStyles() { return getToken(LLVMIRParser.VisibilityStyles, 0); }
		public TerminalNode UnnamedAddr() { return getToken(LLVMIRParser.UnnamedAddr, 0); }
		public AlignmentContext alignment() {
			return getRuleContext(AlignmentContext.class,0);
		}
		public GlobalDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globalDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LLVMIRListener ) ((LLVMIRListener)listener).enterGlobalDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LLVMIRListener ) ((LLVMIRListener)listener).exitGlobalDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLVMIRVisitor ) return ((LLVMIRVisitor<? extends T>)visitor).visitGlobalDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GlobalDeclContext globalDecl() throws RecognitionException {
		GlobalDeclContext _localctx = new GlobalDeclContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_globalDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(GlobalReg);
			setState(86);
			match(T__1);
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LinkageType) {
				{
				setState(87);
				match(LinkageType);
				}
			}

			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PreemptionSpecifiers) {
				{
				setState(90);
				match(PreemptionSpecifiers);
				}
			}

			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VisibilityStyles) {
				{
				setState(93);
				match(VisibilityStyles);
				}
			}

			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==UnnamedAddr) {
				{
				setState(96);
				match(UnnamedAddr);
				}
			}

			setState(99);
			match(GlobalWord);
			setState(100);
			type(0);
			setState(101);
			initExp();
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__8) {
				{
				setState(102);
				alignment();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDeclContext extends ParserRuleContext {
		public TerminalNode LocalReg() { return getToken(LLVMIRParser.LocalReg, 0); }
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public ClassDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LLVMIRListener ) ((LLVMIRListener)listener).enterClassDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LLVMIRListener ) ((LLVMIRListener)listener).exitClassDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLVMIRVisitor ) return ((LLVMIRVisitor<? extends T>)visitor).visitClassDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassDeclContext classDecl() throws RecognitionException {
		ClassDeclContext _localctx = new ClassDeclContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_classDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(LocalReg);
			setState(106);
			match(T__1);
			setState(107);
			match(T__6);
			setState(108);
			match(T__7);
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__15) | (1L << IntType) | (1L << VoidType) | (1L << LabelType) | (1L << LocalReg))) != 0)) {
				{
				setState(109);
				type(0);
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__8) {
					{
					{
					setState(110);
					match(T__8);
					setState(111);
					type(0);
					}
					}
					setState(116);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(119);
			match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncCallContext extends ParserRuleContext {
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public TerminalNode GlobalReg() { return getToken(LLVMIRParser.GlobalReg, 0); }
		public TerminalNode ParaAttr() { return getToken(LLVMIRParser.ParaAttr, 0); }
		public List<AtomContext> atom() {
			return getRuleContexts(AtomContext.class);
		}
		public AtomContext atom(int i) {
			return getRuleContext(AtomContext.class,i);
		}
		public FuncCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcCall; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LLVMIRListener ) ((LLVMIRListener)listener).enterFuncCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LLVMIRListener ) ((LLVMIRListener)listener).exitFuncCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLVMIRVisitor ) return ((LLVMIRVisitor<? extends T>)visitor).visitFuncCall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncCallContext funcCall() throws RecognitionException {
		FuncCallContext _localctx = new FuncCallContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_funcCall);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ParaAttr) {
				{
				setState(121);
				match(ParaAttr);
				}
			}

			setState(124);
			type(0);
			setState(125);
			match(GlobalReg);
			setState(126);
			match(T__10);
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__15) | (1L << IntType) | (1L << VoidType) | (1L << LabelType) | (1L << LocalReg))) != 0)) {
				{
				setState(127);
				type(0);
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (((((_la - 51)) & ~0x3f) == 0 && ((1L << (_la - 51)) & ((1L << (T__50 - 51)) | (1L << (GlobalReg - 51)) | (1L << (LocalReg - 51)) | (1L << (NullptrConstant - 51)) | (1L << (BoolConstant - 51)) | (1L << (StringConstant - 51)) | (1L << (IntegerLiteral - 51)))) != 0)) {
					{
					setState(128);
					atom();
					}
				}

				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__8) {
					{
					{
					setState(131);
					match(T__8);
					setState(132);
					type(0);
					setState(134);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (((((_la - 51)) & ~0x3f) == 0 && ((1L << (_la - 51)) & ((1L << (T__50 - 51)) | (1L << (GlobalReg - 51)) | (1L << (LocalReg - 51)) | (1L << (NullptrConstant - 51)) | (1L << (BoolConstant - 51)) | (1L << (StringConstant - 51)) | (1L << (IntegerLiteral - 51)))) != 0)) {
						{
						setState(133);
						atom();
						}
					}

					}
					}
					setState(140);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(143);
			match(T__11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncInfoContext extends ParserRuleContext {
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public TerminalNode GlobalReg() { return getToken(LLVMIRParser.GlobalReg, 0); }
		public TerminalNode LinkageType() { return getToken(LLVMIRParser.LinkageType, 0); }
		public TerminalNode PreemptionSpecifiers() { return getToken(LLVMIRParser.PreemptionSpecifiers, 0); }
		public TerminalNode VisibilityStyles() { return getToken(LLVMIRParser.VisibilityStyles, 0); }
		public TerminalNode UnnamedAddr() { return getToken(LLVMIRParser.UnnamedAddr, 0); }
		public TerminalNode FuncAttr() { return getToken(LLVMIRParser.FuncAttr, 0); }
		public List<TerminalNode> LocalReg() { return getTokens(LLVMIRParser.LocalReg); }
		public TerminalNode LocalReg(int i) {
			return getToken(LLVMIRParser.LocalReg, i);
		}
		public FuncInfoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcInfo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LLVMIRListener ) ((LLVMIRListener)listener).enterFuncInfo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LLVMIRListener ) ((LLVMIRListener)listener).exitFuncInfo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLVMIRVisitor ) return ((LLVMIRVisitor<? extends T>)visitor).visitFuncInfo(this);
			else return visitor.visitChildren(this);
		}
	}
